# vchat

./: CMakeLists.txt  README.md
test_vchat/client/: CMakeLists.txt  main.cpp
test_vchat/server/: CMakeLists.txt
vchat/: CMakeLists.txt  client.h  devices.h  paInit.h  sound.h
